# SimPoly

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: CMakeLists.txt  basic.h  exceptions.h  operations.h  polynomial.h
src/: CMakeLists.txt  operations.cpp
src/basic/: calculus.cpp  evaluations.cpp  operations.cpp  root_findings.cpp
src/polynomial/: jacobi.cpp  legendre.cpp  operators.cpp  polynomial.cpp  radau.cpp
tests/: CMakeLists.txt  test_operations.cpp
tests/basic/: add.cpp  calculus.cpp  evaluate.cpp  find_roots.cpp  main.cpp  operations1.cpp  operations2.cpp
tests/operations/: add.cpp  divide.cpp  evaluate.cpp  find_roots.cpp  main.cpp  multiply.cpp
tests/polynomial/: calculus.cpp  evaluation.cpp  initialization.cpp  initializer.cpp  jacobi.cpp  legendre.cpp  main.cpp  operators.cpp  radau.cpp  reset.cpp
